# osso-xterm

./: AUTHORS  ChangeLog  Makefile.am  autogen.sh  configure.ac
debian/: changelog  control  copyright  gbp.conf  menu  osso-xterm.links  postinst  rules
etc/: Makefile.am  osso-xterm.desktop.in  osso-xterm.schemas  osso-xterm.service.in
icons/: Makefile.am  terminal.xpm
icons/24x24/: Makefile.am
icons/25x25/: Makefile.am
icons/48x48/: Makefile.am
icons/64x64/: Makefile.am
pixmaps/: Makefile.am
po/: POTFILES.in  cs.po  da.po  de.po  es.po  es_ES.po  es_MX.po  fi.po  fr.po  fr_CA.po  fr_FR.po  it.po  nl.po  no.po  osso-xterm.pot  pl.po  pt.po  ru.po  sv.po
src/: Makefile.am  export.map  font-dialog.c  font-dialog.h  he-simple-color-dialog.c  he-simple-color-dialog.h  maemo-vte-marshallers.list  maemo-vte.c  maemo-vte.h  main.c  shortcuts.c  shortcuts.h  stock-icons.c  stock-icons.h  terminal-app-wrapper.c  terminal-app-wrapper.h  terminal-app.c  terminal-app.h  terminal-encoding.c  terminal-encoding.h  terminal-gconf.h  terminal-manager.c  terminal-manager.h  terminal-settings.c  terminal-settings.h  terminal-tab-header.c  terminal-tab-header.h  terminal-widget.c  terminal-widget.h  terminal-window.c  terminal-window.h
src/.deps/: osso_xterm-main.Po  osso_xterm-terminal-app.Po  osso_xterm-terminal-settings.Po  osso_xterm-terminal-tab-header.Po  osso_xterm-terminal-widget.Po
