AC_INIT([osso-xterm],[0.13.mh15])

dnl Initialize automake
AM_CONFIG_HEADER([config.h])
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
AM_MAINTAINER_MODE

AC_PROG_CC
AC_PROG_INSTALL
AC_ISC_POSIX
AC_HEADER_STDC
AC_PROG_LIBTOOL

AX_CFLAGS_GCC_OPTION(-std=c99)
AX_CFLAGS_GCC_OPTION(-Wall)
AX_CFLAGS_GCC_OPTION(-Werror)
AX_CFLAGS_GCC_OPTION(-Wmissing-prototypes)
AX_CFLAGS_GCC_OPTION(-Wmissing-declarations)
AX_CFLAGS_GCC_OPTION(-Wunreachable-code)
AX_CFLAGS_GCC_OPTION(-Wwrite-strings)

PKG_CHECK_MODULES(VTE, vte >= 0.11.0)
AC_SUBST(VTE_LIBS)
AC_SUBST(VTE_CFLAGS)

PKG_CHECK_MODULES(DBUS, dbus-glib-1 >= 0.60)
AC_SUBST(DBUS_LIBS)
AC_SUBST(DBUS_CFLAGS)

PKG_CHECK_MODULES(GCONF, gconf-2.0 >= 2.6.0)
AC_SUBST(GCONF_CFLAGS)
AC_SUBST(GCONF_LIBS)

PKG_CHECK_MODULES(OSSO, libosso >= 0.7.5)
AC_SUBST(VTE_LIBS)
AC_SUBST(VTE_CFLAGS)

PKG_CHECK_MODULES(HILDON_LIBS, hildon-libs >= 0.12.0)
AC_SUBST(HILDON_LIBS_LIBS)
AC_SUBST(HILDON_LIBS_CFLAGS)

AC_DEFINE_UNQUOTED(LOCALEDIR, "/usr/share/locale", Locale dir)

PKG_CHECK_MODULES(HILDON_BASE, hildon-base-lib >= 0.8.1)

AC_OUTPUT([
Makefile
icons/Makefile
icons/24x24/Makefile
icons/25x25/Makefile
icons/48x48/Makefile
icons/64x64/Makefile
etc/Makefile
src/Makefile
])
